# aie4

./: .gitignore  LICENSE
Demo/: demo.ipynb  poc.ipynb  prompts.txt  test.ipynb
Demo/app/: app.py  utils.py
Demo/app_1/: Dockerfile  app.py  requirements.txt  utils.py
Demo/app_2/: Dockerfile_cloud  Dockerfile_local  app.py  chainlit.md  chat_log.txt  requirements.txt
Demo/content/output/: CHW_EOC_04-21-2017_ENG.pdf.json
Demo/docs/masshealth/: ACA-1-0324.docx
Demo/docs/medi-cal/: mcsupbilling.xlsx
Demo/ragas/: synthetic_testset_ragas_results.csv
Demo/testsets/: masshealth_openai_testset.csv  masshealth_vertexai_testset.csv  masshealth_vertexai_testset_2.csv  synthetic_testset.csv
Sample Notebooks/: RAG_Llama3_Unstructured_LangChain.ipynb
Samples/: Advanced_RAG_Strategies_w_Langchain_ipynb_(go_adv_rag_colab).ipynb
Samples/LCEL Runnables/: LCEL_Deep_Dive_Part_2_Runnables.ipynb
Week 1/Day 2/: Pythonic_RAG_Assignment - stampfli.ipynb  Pythonic_RAG_Assignment.ipynb  stampfli - Pythonic_RAG_Assignment.ipynb
Week 1/Day 2/data/: attention_is_all_you_need.txt
Week 2/Day 2/: Assignment_Introduction_to_LangChain_v0_2_0_and_LCEL_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
Week 3/Day 1/: Introduction_to_LangGraph_Assignment_Version.ipynb
Week 3/Day 2/: Multi_Agent_RAG_LangGraph.ipynb  Multi_Agent_RAG_LangGraph_2.ipynb  Multi_Agent_RAG_LangGraph_3.ipynb
Week 3/Day 2/content/data/22f3ccbc/: Linear_Regression_LinkedIn_Post_Outline.txt
Week 3/Day 2/content/data/76cefe2b/: Edited_LinkedIn_Post_Linear_Regression.txt  LinkedIn_Post_Outline_Linear_Regression.txt
Week 3/Day 2/content/data/7f9b1efb/: Final_LinkedIn_Post_on_Llama-3_Development.txt  Outline_for_LinkedIn_Post_on_Linear_Regression.txt
Week 3/Day 2/content/data/9e346724/: LinkedIn_Post_Outline_Linear_Regression.txt
Week 3/Day 2/content/data/ceb14a72/: Outline_for_LinkedIn_Post_on_Linear_Regression.txt
Week 4/Day 1/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
Week 4/Day 2/: testset.csv
Week 5/: .gitignore
Week 5/Day 1/: Fine_tuning_Embedding_Models_for_RAG_Assignment_Notebook.ipynb
Week 5/Day 2/: Fine_tuning_Llama_3_1_8B_Instruct_for_Summarization.ipynb
Week 6/: Midterm.ipynb  test_dataset.jsonl  testset.csv  training_dataset.jsonl  val_dataset.jsonl
Week 6/Hugging Face/: app.py  requirements.txt
Week 6/Hugging Face/Final/: Dockerfile  app.py  chainlit.md  requirements.txt  utils.py
Week 6/Hugging Face/Task 2/: Dockerfile  app.py  requirements.txt  utils.py
Week 7/Day 1/: DSPy_Advanced_Prompt_Engineering_+_RAG_Assignment.ipynb
Week 7/Day 2/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  SDG.ipynb  Test.ipynb  Tracing.ipynb  synthetic_testset.csv
Week 7/Day 2/datasets/: bm25_chain_ds.csv  contextual_compression_chain_ds.csv  ensemble_chain_ds.csv  multi_query_chain_ds.csv  naive_chain_dataset_ds.csv  naive_chain_ds.csv  naive_dataset_ds.csv  parent_document_chain_ds.csv  semantic_chain_ds.csv
Week 7/Day 2/ragas/: bm25_chain_ds_ragas_results.csv  contextual_compression_chain_ds_ragas_results.csv  ensemble_chain_ds_ragas_results.csv  multi_query_chain_ds_ragas_results.csv  naive_chain_ds_ragas_results.csv  parent_document_chain_ds_ragas_results.csv  semantic_chain_ds_ragas_results.csv  var_ragas_results.csv
Week 8/Day 1/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
Week 8/Day 1/Application Start/: app.py  utils.py
Week 8/Day 2/: Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb
Week 8/Day 2/Application Start/: app.py  chainlit.md
Week 9/Day 1/: README.md  qdrant_docker.txt  server.py  test.ipynb  test_servers.ipynb
Week 9/Day 1/onprem/: Dockerfile  README.md  pyproject.toml  requirements copy.txt  requirements.txt  requirements_old.txt
Week 9/Day 1/onprem/app/: server.py
