[tool.poetry]
name = "onprem-dnd-rag"
version = "0.1.0"
description = "A DnD RAG Application Served through LangServe!"
authors = ["Chris Alexiuk <chris@aimakerspace.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.9"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.0"
attrs = "24.2.0"
backoff = "2.2.1"
beautifulsoup4 = "4.12.3"
certifi = "2024.8.30"
cffi = "1.17.1"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpickle = "3.0.0"
colorama = "0.4.6"
coloredlogs = "15.0.1"
cryptography = "43.0.1"
dataclasses-json = "0.6.7"
datasets = "3.0.1"
dill = "0.3.8"
diskcache = "5.6.3"
distro = "1.9.0"
einops = "0.8.0"
emoji = "2.14.0"
eval-type-backport = "0.2.0"
fastapi = "0.115.0"
filelock = "3.16.1"
filetype = "1.2.0"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
gguf = "0.10.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
greenlet = "3.1.1"
gritql = "0.1.5"
grpcio = "1.66.2"
grpcio-tools = "1.66.2"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "1.0.6"
httptools = "0.6.1"
httpx = "0.27.2"
huggingface-hub = "0.25.1"
humanfriendly = "10.0"
hyperframe = "6.0.1"
idna = "3.10"
interegular = "0.3.3"
jinja2 = "3.1.4"
jiter = "0.6.1"
joblib = "1.4.2"
jq = "1.8.0"
jsonpatch = "1.33"
jsonpath-python = "1.0.6"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
langchain = "0.3.2"
langchain-cli = "0.0.31"
langchain-community = "0.3.1"
langchain-core = "0.3.9"
langchain-ollama = "0.2.0"
langchain-openai = "0.2.2"
langchain-qdrant = "0.1.4"
langchain-redis = "0.1.0"
langchain-text-splitters = "0.3.0"
langdetect = "1.0.9"
langgraph = "0.2.34"
langgraph-checkpoint = "2.0.1"
langserve = "0.3.0"
langsmith = "0.1.132"
lark = "1.2.2"
llvmlite = "0.43.0"
lm-format-enforcer = "0.10.6"
lxml = "5.3.0"
markdown-it-py = "3.0.0"
markupsafe = "3.0.1"
marshmallow = "3.22.0"
mdurl = "0.1.2"
mistral-common = "1.4.4"
ml-dtypes = "0.4.1"
mpmath = "1.3.0"
msgpack = "1.1.0"
msgspec = "0.18.6"
multidict = "6.1.0"
multiprocess = "0.70.16"
mypy-extensions = "1.0.0"
networkx = "3.3"
nltk = "3.9.1"
numba = "0.60.0"
numpy = "1.26.4"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-ml-py = "12.560.30"
nvidia-nccl-cu12 = "2.20.5"
nvidia-nvjitlink-cu12 = "12.6.77"
nvidia-nvtx-cu12 = "12.1.105"
olefile = "0.47"
ollama = "0.3.3"
openai = "1.51.2"
orjson = "3.10.7"
outlines = "0.0.46"
pandas = "2.2.3"
partial-json-parser = "0.2.1.1.post4"
pillow = "10.4.0"
portalocker = "2.10.1"
prometheus-fastapi-instrumentator = "7.0.0"
prometheus-client = "0.21.0"
propcache = "0.2.0"
protobuf = "5.28.2"
py-cpuinfo = "9.0.0"
pyairports = "2.1.1"
pyarrow = "17.0.0"
pycountry = "24.6.1"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
pypdf = "5.0.1"
python-dotenv = "1.0.1"
python-iso639 = "2024.4.27"
python-magic = "0.4.27"
python-oxmsg = "0.0.1"
python-ulid = "2.7.0"
pytz = "2024.2"
pyyaml = "6.0.2"
qdrant-client = "1.12.0"
rapidfuzz = "3.10.0"
ray = "2.37.0"
redis = "5.1.1"
redisvl = "0.3.4"
referencing = "0.35.1"
regex = "2024.9.11"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.2"
rpds-py = "0.20.0"
safetensors = "0.4.5"
sentencepiece = "0.2.0"
shellingham = "1.5.4"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.35"
sse-starlette = "1.8.2"
starlette = "0.38.6"
sympy = "1.13.3"
tabulate = "0.9.0"
tenacity = "8.5.0"
tiktoken = "0.7.0"
tokenizers = "0.20.0"
tomlkit = "0.12.5"
torch = "2.4.0"
torchvision = "0.19.0"
tqdm = "4.66.5"
transformers = "4.45.2"
triton = "3.0.0"
typer = "0.9.4"
typing-inspect = "0.9.0"
tzdata = "2024.2"
unstructured-client = "0.26.0"
upstash-vector = "0.6.0"
urllib3 = "2.2.3"
uvicorn = "0.23.2"
uvloop = "0.20.0"
vllm = "0.6.2"
watchfiles = "0.24.0"
websockets = "13.1"
wrapt = "1.16.0"
xformers = "0.0.27.post2"
xxhash = "3.5.0"
yarl = "1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
